new assets added

--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -194,7 +194,7 @@
                 avatarImg.src = '/static/welcome.gif';
                 break;
             case 'listen':
-                avatarImg.src = '/static/idle.gif';
+                avatarImg.src = '/static/listening.gif';
                 break;
             case 'respond':
                 avatarImg.src = '/static/reading.gif';
