--- a/aClient/static/style.css
+++ b/aClient/static/style.css
@@ -174,6 +174,7 @@ button i {
     margin-right: 30%;
     word-wrap: break-word; /* Ensure long texts are wrapped */
     transition: all 0.5s ease;
+    justify-content: left;
 }
 .user-input:hover {
     background-position: left bottom;
