--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="tablet-home-button"></div>
 </div>
-<button id="settings-toggle" class="settings-toggle">Settings</button>
+<button id="settings-toggle" class="settings-toggle"><i class="fas fa-cog"></i></button>
 <div class="settings-panel" id="settings-panel">
     <h3>Settings</h3>
     <input type="text" id="user-name" placeholder="Your Name">
