--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -212,7 +212,7 @@
         // Sending an AJAX POST request to Flask
         $.ajax({
             type: "POST",
-            url: "http://record:5002/save_settings",  // Flask route
+            url: "http://localhost:7000/save_settings",  // Pointing to the tunneled port
             contentType: "application/json",
             data: JSON.stringify({
                 userName: userName,
