get session username

--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -220,6 +220,9 @@
                 selectedLanguage: selectedLanguage
             }),
             dataType: "json",
+            xhrFields: {
+                withCredentials: true
+            },
             success: function (response) {
                 console.log("Settings saved successfully:", response);
             },
